--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,6 @@
   <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <h1>Server is running...</h1>
+    <h2>Service is ready...</h2>
 </body>
 </html>
